[package]
name = "telegram-bot"
version = "0.7.0"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>", "Fedor Gogolev <knsd@knsd.net>"]

description = "A library for creating Telegram bots"

documentation = "https://docs.rs/telegram-bot/"
repository = "https://github.com/telegram-rs/telegram-bot"
readme = "../README.md"

keywords = ["telegram", "bot", "chat", "api"]
categories = ["api-bindings", "asynchronous"]
license = "MIT"

[dependencies]
antidote = "1.0"
error-chain = "0.12"
futures = "0.1"
http = "0.1"
telegram-bot-raw = { version = "=0.7.0", path = "../raw" }
tokio = "0.1"
tokio-timer = "0.2"

[dependencies.hyper]
version = "0.12"
optional = true

[dependencies.hyper-tls]
version = "0.3"
optional = true

[features]
default = ["hyper_connector"]
hyper_connector = ["hyper", "hyper-tls"]
